--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,15 @@
+<div id="pageTitle" class="titleBar" layout="row">
+  <h2>Home</h2>
+</div>
 <div class="jumbotron">
+  <img src="img/logo.png">
   <h1>Scrollbinder</h1>
   <p class="lead">A DnD Character Planner</p>
 </div>
 
-<div class="row marketing">
-  <h2>Useful Resources:</h2>
+<div id="bottomMenu" class="row">
   <div layout="row" layout-sm="column">
-    <md-button ng-href="http://dnd.wizards.com/articles/features/basicrules" target="_blank" class="md-primary" flex flex-sm="100"><span>Basics Rules</span></md-button>
-    <md-button ng-href="http://dnd.wizards.com/articles/features/character_sheets" target="_blank" class="md-primary" flex flex-sm="100"><span>Characer Sheets</span></md-button>
-  </div>
-  <div layout="row" layout-sm="column">
-    <md-button ng-href="http://www.google.com/design/spec/material-design/introduction.html" target="_blank" class="md-primary" flex flex-sm="100"><span>Material Design</span></md-button>
-    <md-button ng-href="https://material.angularjs.org/#/" target="_blank" class="md-primary" flex flex-sm="100"><span>Angular Material</span></md-button>
+    <md-button ng-controller="AppCtrl" ng-click="toggleLeft()" class="topBtn md-primary" flex flex-sm="100"><span>Menu</span></md-button>
+    <md-button ng-controller="AppCtrl" ng-click="go('/character-details')" class="md-primary" flex flex-sm="100"><span>Character Details</span></md-button>
   </div>
 </div>
