--- a/app/views/ability-scores.html
+++ b/app/views/ability-scores.html
@@ -28,7 +28,7 @@
       <div class="title" flex="33">Strength</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.str" ng-change="setStr()">
+          <input tabindex="1" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.str" ng-change="setStr()">
         </md-input-container>
       </div>
 
@@ -40,7 +40,7 @@
       <div class="title" flex="33">Dexterity</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.dex" ng-change="setDex()">
+          <input tabindex="2" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.dex" ng-change="setDex()">
         </md-input-container>
       </div>
       <div class="modifier" ng-model="dexMod" flex="33" ng-init="setDex()"><strong>{{dexMod}}</strong></div>
@@ -51,7 +51,7 @@
       <div class="title" flex="33">Constitution</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.con" ng-change="setCon()">
+          <input tabindex="3" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.con" ng-change="setCon()">
         </md-input-container>
       </div>
       <div class="modifier" ng-model="conMod" flex="33" ng-init="setCon()"><strong>{{conMod}}</strong></div>
@@ -62,7 +62,7 @@
       <div class="title" flex="33">Intelligence</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.int" ng-change="setInt()">
+          <input tabindex="4" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.int" ng-change="setInt()">
         </md-input-container>
       </div>
       <div class="modifier" ng-model="intMod" flex="33" ng-init="setInt()"><strong>{{intMod}}</strong></div>
@@ -73,7 +73,7 @@
       <div class="title" flex="33">Wisdom</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.wis" ng-change="setWis()">
+          <input tabindex="5" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.wis" ng-change="setWis()">
         </md-input-container>
       </div>
       <div class="modifier" ng-model="wisMod" flex="33" ng-init="setWis()"><strong>{{wisMod}}</strong></div>
@@ -84,7 +84,7 @@
       <div class="title" flex="33">Charisma</div>
       <div flex="33">
         <md-input-container>
-          <input type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" ng-model="abilityScores.cha" ng-change="setCha()">
+          <input tabindex="6" type="number" placeholder="0" onfocus="this.placeholder = ''" onblur="this.placeholder = '0'" min="0" max="30" ng-model="abilityScores.cha" ng-change="setCha()">
         </md-input-container>
       </div>
       <div class="modifier" ng-model="chaMod" flex="33" ng-init="setCha()"><strong>{{chaMod}}</strong></div>
