--- a/app/views/character-summary.html
+++ b/app/views/character-summary.html
@@ -21,11 +21,11 @@
 
         <div id="basicInfo">
           <p><strong>{{item.name}}</strong></p>
-          <p><strong>Level {{item.level}} {{item.race}} {{item.class}}</strong></p>
+          <p><strong>{{item.level}} {{item.race}} {{item.class}}</strong></p>
         </div>
 
         <div class="titleBar">
-          <h2>Ability Modifiers:</h2>
+          <h2>Ability Modifiers</h2>
         </div>
 
         <div layout-sm="column">
