--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,8 +2,8 @@
   <h2>Home</h2>
 </div>
 <div class="jumbotron">
-  <img src="img/logo.png">
-  <h1>Scrollbinder</h1>
+  <img id="logo" src="img/logo.png">
+  <h1>ScrollBinder</h1>
   <p class="lead">A DnD Character Planner</p>
 </div>
 
