have not been keeping the app folder up to date, copying content from the test banch to this one

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,11 +1,15 @@
+<div id="pageTitle" class="titleBar" layout="row">
+  <h2>Home</h2>
+</div>
 <div class="jumbotron">
-  <h1>Pocket Scroll</h1>
-  <p class="lead">A DnD Character Editor</p>
+  <img id="logo" src="img/logo.png">
+  <h1>ScrollBinder</h1>
+  <p class="lead">A DnD Character Planner</p>
 </div>
 
-<div class="row marketing">
-  <h2>Useful Resources:</h2>
-  <md-button ng-href="http://dnd.wizards.com/articles/features/basicrules" target="_blank" class="md-primary"><span>Basic Rules</span></md-button>
-
-  <md-button ng-href="http://dnd.wizards.com/articles/features/character_sheets" target="_blank" class="md-primary"><span>Characer Sheets</span></md-button>
+<div id="bottomMenu" class="row">
+  <div layout="row" layout-sm="column">
+    <md-button ng-controller="AppCtrl" ng-click="toggleLeft()" class="topBtn md-primary" flex flex-sm="100"><span>Menu</span></md-button>
+    <md-button ng-controller="AppCtrl" ng-click="go('/character-details')" class="md-primary" flex flex-sm="100"><span>Character Details</span></md-button>
+  </div>
 </div>
