--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -1,7 +1,6 @@
 
 <div>
-  <md-content>
-
+  <md-content md-theme="default">  
     <div id="pageTitle" class="titleBar" layout="row">
       <h2>Character Details</h2>
       <!-- <md-button flex="10" flex-sm="20" class="md-primary" ng-click="showAlert($event)" aria-label="Proficiency Info">
@@ -14,39 +13,59 @@
 
         <md-input-container flex>
           <label class="placeholderLabel">Character Name</label>
-          <input ng-model="details.name" ng-change="setName()">
+          <input class="md-input" ng-model="details.name" ng-change="setName()">
         </md-input-container>
 
-        <md-input-container class="selectBox" flex>
-          <label class="md-primary select-label">Race</label>
-          <select class="md-input" ng-model="selectedRace" ng-options="item for item in races track by item" ng-change="updateSubrace(); setRace(); setSubrace()">
-          </select>
-        </md-input-container>
 
-        <md-input-container class="selectBox" flex>
-          <label class="md-primary select-label">Subrace</label>
-          <select id="subrace" class="md-input" ng-model="selectedSubrace" ng-options="item for item in subraces track by item" ng-change="setSubrace()">
-          </select>
-        </md-input-container>
+       <div class="selectBox" flex>
+            <label class="md-primary">Race</label>
+            <md-select ng-model="selectedRace" placeholder="Select a Race" ng-change="updateSubrace(); setRace(); setSubrace()">
+                <md-select-label>{{selectedRace}}</md-select-label>
+                <md-option ng-repeat="item in races track by item" ng-value="item">{{item}}</md-option>
+            </md-select>
       </div>
+          
+          
+         <div class="selectBox" flex>
+            <label class="md-primary">Subrace</label>
+            <md-select ng-model="selectedSubrace" ng-change="setSubrace();">
+                <md-select-label>{{selectedSubrace}}</md-select-label>
+                <md-option ng-repeat="item in subraces track by item" ng-value="item">{{item}}</md-option>
+            </md-select>
+        </div>
+          
+      </div>
+        
+        
 
       <div layout layout-sm="column">
-        <md-input-container class="selectBox" flex>
-          <label class="md-primary select-label">Class</label>
-          <select class="md-input" ng-model="selectedClass" ng-options="item for item in characterClasses" ng-change="setClass()">
-          </select>
-        </md-input-container>
-        <md-input-container class="selectBox" flex>
-          <label class="md-primary select-label">Background</label>
-          <select class="md-input" ng-model="selectedBackground" ng-options="item for item in backgrounds" ng-change="setBackground()">
-          </select>
-        </md-input-container>
-        <md-input-container class="selectBox" flex>
-          <label class="md-primary select-label">Alignment</label>
-          <select class="md-input" ng-model="selectedAlignment" ng-options="item for item in alignment" ng-change="setAlignment()">
-          </select>
-        </md-input-container>
+          
+       <div class="selectBox" flex>
+            <label class="md-primary">Class</label>
+            <md-select ng-model="selectedClass" ng-change="setClass();">
+                <md-select-label>{{selectedClass}}</md-select-label>
+                <md-option ng-repeat="item in characterClasses track by item" ng-value="item">{{item}}</md-option>
+            </md-select>
+        </div>
+             
+        <div class="selectBox" flex>
+            <label class="md-primary">Background</label>
+            <md-select ng-model="selectedBackground" ng-change="setBackground()">
+                <md-select-label>{{selectedBackground}}</md-select-label>
+                <md-option ng-repeat="item in backgrounds track by item" ng-value="item">{{item}}</md-option>
+            </md-select>
+        </div>
+          
+        <div class="selectBox" flex>
+            <label class="md-primary">Alignment</label>
+            <md-select ng-model="selectedAlignment" ng-change="setAlignment()">
+                <md-select-label>{{selectedAlignment}}</md-select-label>
+                <md-option ng-repeat="item in alignment track by item" ng-value="item">{{item}}</md-option>
+            </md-select>
+        </div>
       </div>
+        
+        
 
       <div layout layout-sm="column">
         <md-input-container flex>
