--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -217,6 +217,8 @@ md-input-label{
 md-input-container{
     padding-left:.5em;
     padding-right:.5em;
+    padding-top: 0;
+    top: 2px;
 }
 
 
@@ -253,8 +255,26 @@ md-input-container.md-input-focused label:not(.md-no-float), md-input-container.
 md-input-container label:not(.md-no-float){
      transform: translate3d(0, 44px, 0) scale(1);
 }
-/*Setting up messages and warning dialogue boxes*/
 
+md-input-container.md-input-focused .md-placeholder{
+    transform: translate3d(0, 10px, 0);
+}
+md-input-container .md-placeholder{
+    transform: translate3d(0, 10px, 0);
+    opacity:1;
+    font-size:1.1em;
+}
+
+/*Setting up messages and warning dialogue boxes*/
+.customInput{
+    width:80%;
+}
+.clearCustom{
+    margin:0;
+}
+.inline{
+    display:inline!important;
+}
 .hide{
   display:none;
 }
@@ -425,6 +445,10 @@ md-input-container input, md-input-container select{
   font-size:1.1em;
   font-weight:600;
 }
+customInputContainer{
+    top:2px
+}
+
 
 .selectBox label{
   color:rgba(0,0,0,0.54)!important;
@@ -445,7 +469,7 @@ md-input-container select.md-input::-ms-expand {
 }
 
 md-select{
-    margin-top: .8em;
+    margin-top:0;
     width: 100%;
     padding: 0 .5em;
     font-size: 1.1em;
@@ -457,6 +481,8 @@ md-select{
 }
 md-select-label{
     font-weight:700;
+    top:2px;
+    height:44px;
 }
 /*-End of select container styles-*/
 
@@ -569,4 +595,9 @@ input[type=number]::-webkit-outer-spin-button {
     border-right:none;
   }
 
+}
+
+.customInputContainer {
+    top:2px;
+    padding: 0 .5em;
 }
