--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -201,12 +201,12 @@ md-icon{
 
 md-select-menu{
     font-weight: 700;
-	width: 100%;
+	width: 90%;
 	margin: 0px auto 0px auto;
 }
 .md-select-menu-container{
 	align-content: center;
-	left:0px!important;
+/*	left:0px!important;*/
 }
 label{
   padding:0;
@@ -278,6 +278,11 @@ md-input-container .md-placeholder{
 }
 .clearCustom{
     margin:0;
+    display:inline;
+}
+.clearCustom .md-button{
+    margin:0 .5em 0 0;
+    float: right;
 }
 .inline{
     display:inline!important;
@@ -601,11 +606,14 @@ input[type=number]::-webkit-outer-spin-button {
     border-bottom:2px solid #90A4AE;
     border-right:none;
   }
-
+    .md-select-menu-container{
+        left:0px!important;
+    }
 }
 
 .customInputContainer {
     top:2px;
-    padding-left:.5em;	
-	padding-bottom:1.5em;
+    margin-left:.5em;
+    padding-left:0;
+	padding-bottom:1.55em;
 }
