--- a/app/views/character-details.html
+++ b/app/views/character-details.html
@@ -13,7 +13,7 @@
 
         <md-input-container flex>
           <label class="placeholderLabel">Character Name</label>
-          <input class="md-input" ng-model="details.name" ng-change="setName()">
+          <input class="md-input" ng-model="characterDetails.name" ng-change="setName()">
         </md-input-container>
 
 
