--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -624,9 +624,19 @@ input[type=number]::-webkit-outer-spin-button {
 	padding-bottom:1.55em;
 }
 .personalityInfo {
-    margin-top:1em;
     padding:0em 1em;
 }
-.personalityInfo textarea{
+.margin-top{
+    margin-top:1em;
+}
+textarea{
     font-weight:700;
+}
+
+.languages {
+    margin-bottom:1em;
+    padding-left:0;
+}
+.languages .md-char-counter{
+    margin-right:1em;
 }
